# sgbo-notebook-api

./: .copier-answers.django-project.yml  .gitignore  Makefile  README.md  compose.yaml  pyproject.toml  sgbo-notebook-api.sublime-project
docker/: Dockerfile
src/sgbo_notebook_api/: admin.py  asgi.py  config.py  manage.py  models.py  nlp.py  schemas.py  serializers.py  urls.py  views.py  wsgi.py
src/sgbo_notebook_api/migrations/: 0001_initial.py  0002_rename_desctipion_notebook_description.py
src/sgbo_notebook_api/settings/: base.py
src/sgbo_notebook_api/templates/: nlp_debug.html
src/sgbo_notebook_api/templates/rest_framework/: api.html
tests/: conftest.py
tests/functional/: test_nlp.py  test_notebook_api_endpoints.py
tests/project/: test_admin_login.py
